--- a/index.html
+++ b/index.html
@@ -32,15 +32,19 @@
                 </p>
                 <div class="botoes">
                     <button class="botao">
+                        <i class="fas fa-play"></i>
                         ASSISTIR AGORA
                     </button>
                     <button class="botao">
+                        <i class="fas fa-info-circle"></i>
                         MAIS INFORMAÇÕES
                     </button>
                 </div>
             </div>
         </div>
     </main>
+
+    <script src="https://kit.fontawesome.com/594e14f6c8.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
