--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main.css">
+    
+    <!--  owl css --->
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
+
+
     <title>Netflix Clone</title>
 </head>
 
@@ -44,7 +50,49 @@
         </div>
     </main>
 
+    <div class="carrosel-filmes">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filmes" src="img/filme1.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filmes" src="img/filme2.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filmes" src="img/filme3.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filmes" src="img/filme4.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filmes" src="img/filme5.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filmes" src="img/filme6.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filmes" src="img/filme7.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filmes" src="img/filme8.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filmes" src="img/filme9.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filmes" src="img/filme10.jpg" alt="">
+            </div>
+        </div>
+    </div>
+
     <script src="https://kit.fontawesome.com/594e14f6c8.js" crossorigin="anonymous"></script>
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/owl/setup.js"></script>
+
+
+
+
 </body>
 
 </html>
