--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </main>
 
     <div class="carrosel-filmes">
+        <p class="filmes">Filmes em destaques</p>
         <div class="owl-carousel owl-theme">
             <div class="item">
                 <img class="box-filmes" src="img/filme1.jpg" alt="">
